--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -35,16 +35,14 @@
     </script>
 </head>
 
-<body class="bg-blue-sky flex justify-center items-center h-screen ">
-    <main class="flex flex-col px-6 md: inline-block md:w-1/3">
-        <div>
-            <div class="bg-white flex flex-col justify-between p-6 rounded-t-md ">
-                <h1 class="font-roboto text-green-pool font-bold mb-2">Join our comunity!</h1>
-                <p class="font-roboto text-green-btn mb-2">30-day hassie-free money back guarantee</p>
-                <p class="font-roboto text-slate-500">Gain access to our full library of tutorials along with expert code reviews. Perfect for any develops who are serious about honing their skills.</p>
-            </div>
+<body class="bg-blue-sky flex justify-center items-center h-screen">
+    <main class="flex flex-col px-6">
+        <div class="bg-white flex flex-col justify-between p-6 rounded-t-md">
+            <h1 class="font-roboto text-green-pool font-bold mb-2">Join our comunity!</h1>
+            <p class="font-roboto text-green-btn mb-2">30-day hassie-free money back guarantee</p>
+            <p class="font-roboto text-slate-500">Gain access to our full library of tutorials along with expert code reviews. Perfect for any develops who are serious about honing their skills.</p>
         </div>
-        <div class="md: grid grid-cols-2">
+        <div class="">
             <div class="bg-green-water flex flex-col justify-between p-6">
                 <span class="font-roboto text-white font-bold">Monthly subscription</span>
                 <p class="font-roboto text-white font-bold text-3xl mt-4">$29 <span class="font-roboto text-slate-300 text-sm">per month</span></p>
