--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -36,20 +36,20 @@
 </head>
 
 <body class="bg-blue-sky flex justify-center items-center h-screen">
-    <main class="flex flex-col px-6">
+    <main class="flex flex-col px-6 lg:w-1/3">
         <div class="bg-white flex flex-col justify-between p-6 rounded-t-md">
             <h1 class="font-roboto text-green-pool font-bold mb-2">Join our comunity!</h1>
             <p class="font-roboto text-green-btn mb-2">30-day hassie-free money back guarantee</p>
             <p class="font-roboto text-slate-500">Gain access to our full library of tutorials along with expert code reviews. Perfect for any develops who are serious about honing their skills.</p>
         </div>
-        <div class="">
-            <div class="bg-green-water flex flex-col justify-between p-6">
+        <div class="lg:grid grid-cols-2">
+            <div class="bg-green-water flex flex-col justify-between p-6 lg:rounded-bl-md">
                 <span class="font-roboto text-white font-bold">Monthly subscription</span>
                 <p class="font-roboto text-white font-bold text-3xl mt-4">$29 <span class="font-roboto text-slate-300 text-sm">per month</span></p>
                 <p class="font-roboto text-white text-sm">Full access for less then $1 a day</p>
                 <button class="font-roboto self-center bg-green-btn w-full p-3 rounded text-white hover:bg-green-btn-hover shadow-2xl mt-8 font-bold">Sign up</button>
             </div>
-            <footer class="bg-green-pool flex flex-col justify-between p-6 rounded-b-md">
+            <footer class="bg-green-pool flex flex-col justify-between p-6 rounded-b-md lg:rounded-br-md rounded-bl-none">
                 <p class="font-roboto text-white font-bold mb-3">Why us</p>
                 <ul>
                     <li class="font-roboto text-white text-sm">Tutorials by industry experts</li>
