--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -49,7 +49,7 @@
                 <p class="font-roboto text-white text-sm">Full access for less then $1 a day</p>
                 <button class="font-roboto self-center bg-green-btn w-full p-3 rounded text-white hover:bg-green-btn-hover shadow-2xl mt-8 font-bold">Sign up</button>
             </div>
-            <footer class="bg-green-pool flex flex-col justify-between p-6 rounded-b-md lg:rounded-br-md rounded-bl-none">
+            <footer class="bg-green-pool flex flex-col justify-between p-6 rounded-b-md lg:rounded-br-md lg:rounded-bl-none">
                 <p class="font-roboto text-white font-bold mb-3">Why us</p>
                 <ul>
                     <li class="font-roboto text-white text-sm">Tutorials by industry experts</li>
