Add section Best Scenes

--- a/breakingbad/src/index.html
+++ b/breakingbad/src/index.html
@@ -44,20 +44,19 @@
         <div class="flex flex-col space-y-6 bg-lime-800 p-8 rounded-t-none rounded-lg">
             <div class="">
                 <h2 class="text-center font-bold text-white">Walter White - Heisenber</h2>
-                <img class="border border-4 border-white" src="../src/images/heisenberg.jpg" alt="Heisenberg">
-                <p class="mt-4">Walter Hartwell "Walt" White Sr., also known by his clandestine pseudonym and business moniker/alias Heisenberg, is a chemist and drug kingpin from Albuquerque, New Mexico. Walt is a former underachieving high school chemistry teacher at J. P. Wynne High School who, after being diagnosed with terminal lung cancer, started manufacturing chemically pure crystal methamphetamine to provide for his family (his wife Skyler, son Walt Jr., and infant daughter Holly) upon his death. Knowing nothing about the drug trade, Walt enlists the aid of his former student, Jesse Pinkman, to sell the meth he produces.</p>
+                <img class="border-4 border-white" src="../src/images/heisenberg.jpg" alt="Heisenberg">
+                <p class="mt-4 text-white">Walter Hartwell "Walt" White Sr., also known by his clandestine pseudonym and business moniker/alias Heisenberg, is a chemist and drug kingpin from Albuquerque, New Mexico. Walt is a former underachieving high school chemistry teacher at J. P. Wynne High School who, after being diagnosed with terminal lung cancer, started manufacturing chemically pure crystal methamphetamine to provide for his family (his wife Skyler, son Walt Jr., and infant daughter Holly) upon his death. Knowing nothing about the drug trade, Walt enlists the aid of his former student, Jesse Pinkman, to sell the meth he produces.</p>
             </div>
            <hr class="border border-black">
             <div>
                 <h2 class="text-center font-bold text-white">Jesse Pinkman</h2>
-                <img class="border border-4 border-white" src="../src/images/jesse pinkman.jpg" alt="Jesse Pinkman">
-                <p class="mt-4">Jesse Bruce Pinkman is a citizen of Alaska and a retired career criminal, best known as the business and meth cook partner of his former chemistry teacher Walter White in the Albuquerque methamphetamine drug trade as a manufacturer and distributor. Prior to working with Walt, Jesse worked as a small-time methamphetamine user, manufacturer, and dealer.</p>
+                <img class="border 4 text-white">Jesse Bruce Pinkman is a citizen of Alaska and a retired career criminal, best known as the business and meth cook partner of his former chemistry teacher Walter White in the Albuquerque methamphetamine drug trade as a manufacturer and distributor. Prior to working with Walt, Jesse worked as a small-time methamphetamine user, manufacturer, and dealer.</p>
             </div>
            <hr class="border border-black">
             <div>
                 <h2 class="text-center font-bold text-white">Gustavo Fring</h2>
-                <img class="border border-4 border-white" src="../src/images/GusFring.jpg" alt="Gus Fring">
-                <p class="mt-4">Gustavo "Gus" Fring, also referred to as the Chicken Man and the Chilean, is a Chilean-American restaurant entrepreneur that uses his stores as a front for the drug trade. He is the proprietor of Los Pollos Hermanos, a highly successful fried chicken restaurant chain. Gus is also a public booster for the Drug Enforcement Administration office in Albuquerque, New Mexico, as well as a member of the hospital board. Despite outward appearances, Gus is a major drug kingpin initially affiliated with the Cartel, who uses his restaurants as a front for methamphetamine distribution throughout the American southwest, before later fronting his own drug empire. Like Walter White, Gus is a criminal who "hides in plain sight," using his anti-drug philanthropy to conceal his true nature.</p>
+                <img class="border-4 border-white" src="../src/images/GusFring.jpg" alt="Gus Fring">
+                <p class="mt-4 text-white">Gustavo "Gus" Fring, also referred to as the Chicken Man and the Chilean, is a Chilean-American restaurant entrepreneur that uses his stores as a front for the drug trade. He is the proprietor of Los Pollos Hermanos, a highly successful fried chicken restaurant chain. Gus is also a public booster for the Drug Enforcement Administration office in Albuquerque, New Mexico, as well as a member of the hospital board. Despite outward appearances, Gus is a major drug kingpin initially affiliated with the Cartel, who uses his restaurants as a front for methamphetamine distribution throughout the American southwest, before later fronting his own drug empire. Like Walter White, Gus is a criminal who "hides in plain sight," using his anti-drug philanthropy to conceal his true nature.</p>
             </div>
             <div class="group grid grid-cols-2 border border-b-4 shadow-2xl border-white rounded-full p-6 bg-lime-600 hover:bg-lime-800">
                 <span class="text-white font-bold m-auto">See more</span>
@@ -69,6 +68,13 @@
                     </div>
                 </a>
             </div>   
+        </div>
+        <div style="background-image: url(../src/images/fumaca.png);" class="mt-4 bg-repeat grid justify-center items-center bg-scene">
+            <span class="text-center font-bold">Bests Scenes</span>
+            <div class="flex flex-col justify-center items-center">
+                <span>Ozimandias</span>
+                <iframe width="100%" height="100%" src="https://youtube.com/embed/XZ0Gr6HWbbg"  frameborder="0" allowfullscreen ng-show="showvideo""></iframe>
+            </div>
         </div>
     </main>
     <footer>
