--- a/breakingbad/src/index.html
+++ b/breakingbad/src/index.html
@@ -69,13 +69,13 @@
                 </a>
             </div>   
         </div>
-        <div style="background-image: url(../src/images/fumaca.png);" class="mt-4 bg-repeat grid justify-center items-center bg-scene">
+        <section style="background-image: url(../src/images/fumaca.png);" class="mt-4 bg-repeat grid justify-center items-center bg-scene">
             <span class="text-center font-bold">Bests Scenes</span>
             <div class="flex flex-col justify-center items-center">
                 <span>Ozimandias</span>
                 <iframe width="100%" height="100%" src="https://youtube.com/embed/XZ0Gr6HWbbg"  frameborder="0" allowfullscreen ng-show="showvideo""></iframe>
             </div>
-        </div>
+        </section>
     </main>
     <footer>
         <div class="flex justify-center items-center text-white font-bold bg-gradient-to-r from-lime-900 via-lime-600 to-lime-500">&COPY; Designed by Gabriel Muniz</div>
