--- a/css/display-grid/05-areaDesafio.html
+++ b/css/display-grid/05-areaDesafio.html
@@ -8,22 +8,50 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="container">
         <div class="box box1">1</div>
         <div class="box box2">2</div>
         <div class="box box3">3</div>
         <div class="box box5">4</div>
         <div class="box box5">5</div>
-        <div class="box box6">6</div>
-        <div class="box box7">7</div>
-        <div class="box box8">8</div>
-        <div class="box box9">9</div>
-        <div class="box box10">10</div>
-        <div class="box box11">11</div>
-        <div class="box box12">12</div>
-    
-      
+        <div class="box box6">6</div>      
+    </div> -->
+
+  <!-- template areas -->
+    <!-- <div class="container" id="template-areas">
+        <div id="header">
+            <p>Cabeçalho</p>
+        </div>
+        <div id="sidebar">
+            <p>Sidebar</p>
+        </div>
+        <div id="content">
+            <p>Conteúdo</p>
+        </div>
+
+        <div id="footer">
+            <p><footer></footer></p>
+        </div>
+    </div> -->
+
+
+<!-- Alignment -->
+  <!-- <div class="container">
+        <div class="box box1">1</div>
+        <div class="box box2">2</div>
+        <div class="box box3">3</div>
+        <div class="box box5">4</div>
+        <div class="box box5">5</div>
+        <div class="box box6">6</div>      
+    </div> -->
+
+    <div class="container">
+        <header class="topo">Topo</header>
+        <nav class="menu">Menu</nav>
+        <main class="principal">Principal</main>
+        <aside class="primaria">Primaria</aside>
+        <aside class="secundaria">Secundaria</aside>
+        <footer class="rodape">Rodapé</footer>
     </div>
-  
 </body>
 </html>
