--- a/php/index.html
+++ b/php/index.html
@@ -1,3 +1,6 @@
+<?php
+?>
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,25 +8,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <title>Form</title>
+    <style>
+        .form_response {
+            display: none;
+        }
+        .form_response.success{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Formulário com método POST</h1>
-    <form action="index.php" method="post">
+    <form action="process.php" method="POST">
         <label for="name">Nome</label>
-        <input type="text" name="name" id="name">
-
-        <label for="lastname">Sobrenome</label>
-        <input type="text" name="lastname" id="lastname">
+        <input 
+        type="text"
+        name="name"
+        id="name"
+        placeholder="Full name">
 
         <label for="email">Email</label>
-        <input type="email" name="email" id="email">
+        <input 
+        type="email"
+        name="email"
+        id="email"
+        placeholder="example@mail.com">
 
-        <input type="submit" value="Enviar">
+        <label for="alias">Alias</label>
+        <input 
+        type="text"
+        id="alias"
+        name="alias"
+        placeholder="alias">
+
+        <button type="submit" class="btn btn-submit">
+            submit
+        </button>
     </form>
 
+    <div class="form_response">
+        
+    </div>
 
+    <script src="js/form.js"></script>
 </body>
 
 </html>
