--- a/php/index.html
+++ b/php/index.html
@@ -1,4 +1,4 @@
-<?php
+?php
 ?>
 
 <!DOCTYPE html>
@@ -25,7 +25,7 @@
 
 <body>
     <h1>Formulário com método POST</h1>
-    <form action="process.php" method="POST">
+    <form onsubmit="getUser()">
         <label for="name">Nome</label>
         <input 
         type="text"
