--- a/javascript/src/js/getters-setters/index.html
+++ b/javascript/src/js/getters-setters/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Getters e Setters</title>
 </head>
 <body>
-    <script src="./src/js/home.js"></script>
+    <table id="tabela">
+
+    </table>
+    <script src="script.js"></script>
 </body>
 </html>
