--- a/javascript/src/js/heranca/index.html
+++ b/javascript/src/js/heranca/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
-    <title>JS</title>
+    <title>Herança</title>
 </head>
 <body>
     <table id="tabela">
 
     </table>
-    <script src="./js/main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
