--- a/javascript/src/js/projeto-luta/index.html
+++ b/javascript/src/js/projeto-luta/index.html
@@ -30,6 +30,7 @@
     <ul class="log">
 
     </ul>
+    <script src="./assets/js/classes.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
